made the footer smaller on the homepage for the ontology. The height of the footer section with copyright notice was too large before. Removed the js/ folder because that was just for testing hypothes.is bookmarklets in case we need to use that instead to import ontology terms for tagging. This is not needed anymore because Alex solved the issue with our fork of Hypothes.is

--- a/css/style.css
+++ b/css/style.css
@@ -222,8 +222,8 @@ h6 {
 	text-align: left;
 	background-color: #2B4253;
 	color: #fff;
-	padding-top: 20px;
-	padding-bottom: 20px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 	font-size: 16px;
 }
 
